Edit homepage font

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,12 +14,12 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col my-auto">
-            <h1 class="display-4 logo-font text-black">
+        <div id="title-column" class="col">
+            <h1 id="home-title" class="display-4 logo-font text-center text-black scratched-font">
                 WILD MILE CONVERSIONS
             </h1>
             <div class="my-5">
-                <h4>
+                <h4 class="text-center">
                     <a href="#" class="see-conversions-button btn btn-lg rounded-2 text-uppercase py-3">See Conversions</a></h4>
             </div>
         </div>
