--- a/templates/base.html
+++ b/templates/base.html
@@ -36,15 +36,15 @@
     <title>Wild Mile {% block extra_title %}{% endblock %}</title>
   </head>
   <body>
-      <header class="container-fluid fixed-top">
-          <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-              <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
-                  <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                      <h2 class="logo-font text-black my-0">Wild Mile</h2>
-                  </a>
-              </div>
-              <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-               <form method="GET" action="">
+    <header class="container-fluid fixed-top">
+        <div id="topnav" class="row bg-dark pt-lg-2 d-none d-lg-flex">
+            <div class="col-12 pl-5 col-lg-4 col-xl-5 my-auto py-1 py-lg-0 text-center text-lg-left">
+                <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                    <img id="logo-img" src="media/wild_mile_logo_square.png" alt="wild mile logo">
+                </a>
+            </div>
+            <div class="col-12 col-lg-4 col-xl-2 my-auto py-1 py-lg-0">
+                <form method="GET" action="">
                     <div class="input-group w-100">
                         <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
                         <div class="input-group-append">
@@ -57,10 +57,10 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+            <div class="col-12 pr-5 col-lg-4 col-xl-5 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
-                        <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="text-white nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
@@ -80,7 +80,7 @@
                         </div>
                     </li>
                     <li class="list-inline-item">
-                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-white{% endif %} nav-link" href="">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                 <p class="my-0">
@@ -95,8 +95,22 @@
                     </li>
                 </ul>
             </div>
-          </div>
-      </header>
+        </div>
+        <div class="row bg-dark">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span><i id="nav-bars" class="fas fa-bars"></i></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+            </div>            
+        </div>
+    </header>
     
     {% if messages %}
         <div class="message-container"></div>
