--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,7 +25,7 @@
                 MERCHANDISE
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">ALL PRODUCTS</a>
+                <a href="{% url 'products' %}" class="dropdown-item">ALL PRODUCTS</a>
                 <a href="" class="dropdown-item">APPAREL</a>
                 <a href="" class="dropdown-item">STICKERS</a>
                 <a href="" class="dropdown-item">MUGS</a>
