--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,10 @@ body {
     top: -1.5rem;
 }
 
+hr {
+    border-top: 1px solid white;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -109,6 +113,68 @@ bg-dark {
 .scratched-font {
     font-family: pwscratchedfont;
 }
+
+/* ------- Conversion Detail Page ------- */
+
+
+/* Conversion Detail Square Gallery 
+https://www.freecodecamp.org/news/how-to-create-an-image-gallery-with-css-grid-e0f0fd666a5c/ */
+
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-rows: repeat(12, 5vw);
+    grid-gap: 15px;
+}
+
+.gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.gallery__item--1 {
+    grid-column-start: 1;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 7;
+}
+
+.gallery__item--2 {
+    grid-column-start: 7;
+    grid-column-end: 10;
+    grid-row-start: 1;
+    grid-row-end: 4;
+}
+
+.gallery__item--3 {
+    grid-column-start: 7;
+    grid-column-end: 10;
+    grid-row-start: 4;
+    grid-row-end: 7;
+}
+
+.gallery__item--4 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 7;
+    grid-row-end: 10;
+}
+
+.gallery__item--5 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 10;
+    grid-row-end: 13;
+}
+
+.gallery__item--6 {
+    grid-column-start: 4;
+    grid-column-end: 10;
+    grid-row-start: 7;
+    grid-row-end: 13;
+}
+
 
 /* -------------------------------- Media Queries */
 
