--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,8 +5,9 @@
                 BUY A CONVERSION
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">CAMPERVANS</a>
-                <a href="" class="dropdown-item ">MOBILE BARS AND CATERING VANS</a>
+                <a href="{% url 'conversions' %}" class="dropdown-item">ALL CONVERSIONS</a>
+                <a href="{% url 'conversions' %}" class="dropdown-item">CAMPERVANS</a>
+                <a href="{% url 'conversions' %}" class="dropdown-item ">MOBILE BARS AND CATERING VANS</a>
             </div>
         </li>
 
@@ -26,9 +27,9 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
                 <a href="{% url 'products' %}" class="dropdown-item">ALL PRODUCTS</a>
-                <a href="" class="dropdown-item">APPAREL</a>
-                <a href="" class="dropdown-item">STICKERS</a>
-                <a href="" class="dropdown-item">MUGS</a>
+                <a href="{% url 'products' %}?category=clothing" class="dropdown-item">CLOTHING</a>
+                <a href="{% url 'products' %}?category=stickers" class="dropdown-item">STICKERS</a>
+                <a href="{% url 'products' %}?category=mugs" class="dropdown-item">MUGS</a>
             </div>
         </li>
 
