Added nav links to conversions with filter functionality

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -6,8 +6,8 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
                 <a href="{% url 'conversions' %}" class="dropdown-item">ALL CONVERSIONS</a>
-                <a href="{% url 'conversions' %}" class="dropdown-item">CAMPERVANS</a>
-                <a href="{% url 'conversions' %}" class="dropdown-item ">MOBILE BARS AND CATERING VANS</a>
+                <a href="{% url 'conversions' %}?category=camper_conversion" class="dropdown-item">CAMPERVANS</a>
+                <a href="{% url 'conversions' %}?category=mobile_bars_and_catering" class="dropdown-item ">MOBILE BARS AND CATERING VANS</a>
             </div>
         </li>
 
