--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -13,35 +13,44 @@
 <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="image-container my-5">
+            <div class="col offset-lg-2 mt-4 mb-4">
+                <a class="text-white" href="{% url 'conversions' %}">
+                    <span><i class="fas fa-chevron-left text-white"></i> BACK TO CONVERSIONS</span>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-xl-2 offset-lg-1 d-flex justify-content-center col-border-col-1">
+                <div class="p-2 image-container d-flex justify-content-center my-5">
                     {% if conversion.main_image %}
-                        <a href="{{ conversion.main_image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ conversion.main_image.url }}" alt="{{ conversion.name }}">
+                        <a id="conversion-main-image" href="{{ conversion.main_image.url }}" target="_blank">
+                            <img class="card-img img-fluid" src="{{ conversion.main_image.url }}" alt="{{ conversion.name }}">
                         </a>
                     {% else %}
                         <a href="">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.name }}">
+                            <img class="card-img img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ conversion.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
-                    <p class="mb-0 text-white">{{ conversion.name }}</p>
-                    <p class="lead mb-0 text-left text-white font-weight-bold">${{ conversion.price }}</p>
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2">
+                <div class="p-2 product-details-container mb-5 mt-md-5">
+                    <h2 class="mb-0 text-white">{{ conversion.name }}</h2>
+                    <h4 class="lead mb-0 text-left text-white font-weight-bold">£{{ conversion.price }}</h4>
                     <p class="mt-3 text-white">{{ conversion.vehicle_description }}</p>
+                    <a class="btn border-white rounded-2 text-white">Contact Seller</a>
+                    <a class="ml-2 btn border-white rounded-2 text-white">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
-                <div class="product-details-container mb-5">
+        <div class="row mt-5 mb-5">
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1">
+                <div class="p-2 product-details-container mb-5">
                     <p class="mt-3 text-white">{{ conversion.conversion_description }}</p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="product-details-container mb-5 mt-md-5">
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2">
+                <div class="p-2 product-details-container mb-5 mt-md-5">
                     {% for item in electrics %}
                         <p class="mt-3 text-white">{{ item }}</p>
                     {% endfor %}
@@ -52,7 +61,7 @@
 
         <!-- Image Gallery Grid MD and above only -->
 
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-12 col-lg-8 offset-lg-2 d-none d-md-block">
                 <section>
                     <h1 class="text-white mb-3">Image Gallery</h1>
