--- a/conversions/templates/conversions/conversion_detail.html
+++ b/conversions/templates/conversions/conversion_detail.html
@@ -33,28 +33,36 @@
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2">
-                <div class="p-2 product-details-container mb-5 mt-md-5">
-                    <h2 class="mb-0 text-white">{{ conversion.name }}</h2>
-                    <h4 class="lead mb-0 text-left text-white font-weight-bold">£{{ conversion.price }}</h4>
-                    <p class="mt-3 text-white">{{ conversion.vehicle_description }}</p>
-                    <a class="btn border-white rounded-2 text-white">Contact Seller</a>
-                    <a class="ml-2 btn border-white rounded-2 text-white">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+            <div class="bg-white col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex justify-content-center top-bottom-large-border">
+                <div class="p-2 d-flex align-items-center product-details-container mb-5 mt-md-5">
+                    <div class="inner-container">
+                        <h2 class="mb-0 text-black">{{ conversion.name }}</h2>
+                        <h4 class="lead mb-0 text-left text-black font-weight-bold">£{{ conversion.price }}</h4>
+                        <p class="mt-3 text-black">{{ conversion.vehicle_description }}</p>
+                        <a class="btn border-black rounded-2 text-black">Contact Seller</a>
+                        <a class="ml-2 btn border-black rounded-2 text-black">Save to Profile <i class="ml-1 fa fa-plus-circle"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="row mt-5 mb-5">
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1">
-                <div class="p-2 product-details-container mb-5">
-                    <p class="mt-3 text-white">{{ conversion.conversion_description }}</p>
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 offset-lg-1 offset-xl-2 col-border-col-1 bg-white d-flex justify-content-center top-bottom-large-border">
+                <div class="p-2 d-flex align-items-center product-details-container">
+                    <p class="mt-3 text-black">{{ conversion.conversion_description }}</p>
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2">
-                <div class="p-2 product-details-container mb-5 mt-md-5">
-                    {% for item in electrics %}
-                        <p class="mt-3 text-white">{{ item }}</p>
-                    {% endfor %}
-                    <p class="mt-3 text-white">{{ conversion.max_weight }}</p>
+            <div class="col-12 col-md-6 col-lg-5 col-xl-4 col-border-col-2 d-flex align-items-center">
+                <div class="row w-100">
+                    <div class="col-6">
+                        <div class="p-2 product-details-container mb-5 mt-md-5">
+                            {% for item in electrics %}
+                                <p class="mt-3 text-white larger-font"><i class="fas fa-check-circle mr-2"></i>{{ item }}</p>
+                            {% endfor %}
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <p class="mt-3 text-white">Max Weight - {{ conversion.max_weight }}</p>
+                    </div>
                 </div>
             </div>  
         </div>
