--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -36,36 +36,36 @@
                                     {% endif %}
                                 </div>
                             </div>
-                            <div class="col-12 col-md-7">
+                            <div class="col-12 col-md-7 d-flex justify-content-center">
                                 <div class="card">
                                     <div class="card-body bg-white pb-0">
                                         <a href="{% url 'conversion_detail' conversion.id %}">
-                                            <h3 class="mb-0">{{ conversion.name }}</h3>
-                                            <h4 class="mb-2 text-left font-weight-bold">£{{ conversion.price }}</h4>
+                                            <h3 class="mb-0 p-2">{{ conversion.name }}</h3>
+                                            <h4 class="mb-2 p-2 text-left font-weight-bold">£{{ conversion.price }}</h4>
                                         </a>
+                                        <p class="mt-2 p-2 mb-0 text-left font-weight-bold">£{{ conversion.vehicle_description }}</p>
                                     </div>
                                     <div class="card-footer bg-white pt-0 border-0 text-left">
                                         <div class="row">
                                             <div class="col">
-                                                <p class="mt-2 small mb-0 text-left font-weight-bold">£{{ conversion.vehicle_description }}</p>
-                                                <p class="mt-2 mb-0 text-left font-weight-bold"><strong>Berths</strong></p>
-                                                <p>{{ conversion.berths }}</p>
+                                                <p class="p-2 mb-0 text-left font-weight-bold"><strong>Berths</strong></p>
+                                                <p class="mb-0 p-2">{{ conversion.berths }}</p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <p class="mt-1 mb-0 text-left font-weight-bold"><strong>Vehicle Make & Model</strong></p>
-                                                <p>tbc</p>
+                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Vehicle Make & Model</strong></p>
+                                                <p class="mb-0 p-2">tbc</p>
                                             </div>
                                             <div class="col">
-                                                <p class="mt-1 mb-0 text-left font-weight-bold"><strong>Vehicle Year</strong></p>
-                                                <p>tbc</p>
+                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Vehicle Year</strong></p>
+                                                <p class="mb-0 p-2"><strong>tbc</strong></p>
                                             </div>
                                         </div>
                                         <div class="row">
                                             <div class="col">
-                                                <p class="mt-1 mb-0 text-left font-weight-bold"><strong>Location</strong></p>
-                                                <p>tbc</p>
+                                                <p class="mt-1 mb-0 p-2 text-left font-weight-bold"><strong>Location</strong></p>
+                                                <p class="mb-0 p-2">tbc</p>
                                             </div>
                                         </div>
                                     </div>
