--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,12 +12,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="overly"></div>
+    <div class="overlay"></div>
     <div class="container mb-2">
         <div class="row">
             <div class="col"> 
                 <hr>
-                <h2 class="logo-font mb-4">Shopping Bag</h2>
+                <h2 class="logo-font mb-4 text-white">Shopping Bag</h2>
                 <hr>
             </div>
         </div>
