--- a/static/css/base.css
+++ b/static/css/base.css
@@ -68,6 +68,19 @@ hr {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important;
+    border: 1px solid black;
+}
+
+.btn-outline-black:hover,
+.btn-outline-black:active,
+.btn-outline-black:focus {
+    background: black;
+    color: white !important;
+}
+
 .see-conversions-button:hover,
 .see-conversions-button:active,
 .see-conversions-button:focus,
