--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -26,6 +26,8 @@
             <div class="col">
                 {% if bag_items %}
                     <div class="table-responsive rounded">
+                        {{ bag_items }}
+                    </div>
                 {% else %}
                     <p class="lead mb-5">Your bag is empty.</p>
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
