--- a/conversions/templates/conversions/conversions.html
+++ b/conversions/templates/conversions/conversions.html
@@ -15,11 +15,49 @@
         <div class="row">
             <div class="col mt-3">
                 <h2 class="logo-font page-header text-white">Conversions</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <a class="category-badge text-decoration-none" href="{% url 'conversions' %}">
+                        <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light">All Conversions</span>
+                    </a>
+                {% for c in all_categories %}
+                    <a class="category-badge text-decoration-none" href="{% url 'conversions' %}?category={{ c.name }}">
+                        <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light">{{ c.friendly_name }}</span>
+                    </a>
+                {% endfor %}
                 <hr class="page-header-hr text-white mb-1">
             </div>
         </div>
         <div class="row">
             <div class="product-container col-10 offset-1">
+
+                <div class="row mt-1 mb-2">
+                    <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+                        <div class="sort-select-wrapper w-50">
+                            <select id="sort-selector"
+                                class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                                <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                                <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                                <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                                <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                                <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                                <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category
+                                    (A-Z)</option>
+                                <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category
+                                    (Z-A)</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 order-md-first">
+                        <p class="text-white mt-3 text-center text-md-left">
+                            {{ conversions|length }} Conversion{% if conversions|length is not 1 %}s{% endif %}
+                            {% if search_term %} found for <strong>"{{ search_term }}"</strong>{% elif current_category %} found in "{{ current_category }}"{% endif %}
+                        </p>
+                    </div>
+                </div>
+
                 {% for conversion in conversions %}
                     <div class="row mt-1 mb-2"></div>
                         <div class="row conversion-listing">
@@ -77,4 +115,42 @@
             </div>
         </div>
     </div>
+    <div class="btt-button shadow-sm rounded-0 border border-white">
+        <a class="btt-link d-flex h-100">
+            <i class="fas fa-arrow-up text-white mx-auto my-auto"></i>
+        </a>	
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+    </script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+            
+            var selectedVal = selector.val();
+            if(selectedVal != "reset") {
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort", sort);
+                currentUrl.searchParams.delete("direction", direction);
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
