--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,6 +15,10 @@
         <div class="row">
             <div class="col mt-3">
                 <h2 class="logo-font page-header text-white">Merchandise</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
                 {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
                         <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light">{{ c.friendly_name }}</span>
