Change various font sizes

--- a/conversions/templates/conversions/approve_conversions.html
+++ b/conversions/templates/conversions/approve_conversions.html
@@ -25,9 +25,9 @@
         <div class="row">
             <div class="col mt-4 mb-4">
                 {% if require_approval %}
-                <h5 class=" page-header text-white">Pending Approval</h5>
+                <h5 class="page-sub-header text-white">Pending Approval</h5>
                 {% else %}
-                <h5 class=" page-header text-white">There are no listings awating approval.</h5>
+                <h5 class="page-sub-header text-white">There are no listings awating approval.</h5>
                 {% endif %}
             </div>
         </div>
