--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -18,9 +18,20 @@
     <div class="container">
         <div class="row">
             <div class="col"> 
+                <h2 class="logo-font mt-5 mb-4 text-white">My Profile</h2>
                 <hr>
-                <h2 class="logo-font mb-4 text-white">My Profile</h2>
-                <hr>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-lg-5">
+                <a href="{% url 'order_history' %}"><p class="text-white mt-3 mb-3">Order History</p></a>
+                <a href="{% url 'my_listings' %}"><p class="text-white mt-3 mb-3">View My Listings</p></a>
+                <a href="{% url 'saved_listings' %}"><p class="text-white mt-3 mb-3">Saved Listings</p></a>
+                <a href="{% url 'add_conversion' %}"><p class="text-white mt-3 mb-3">Add a Conversion</p></a>
+                <a href="{% url 'message_portal' %}"><p class="text-white mt-3 mb-3">Go To Message Portal (coming soon)</p></a>
+            </div>
+            <div class="col-12 col-lg-7">
+
             </div>
         </div>
 {% endblock %}
