Added defauly delivery info to profile page, updated toast success logic and created order history template content

--- a/profiles/templates/profiles/order_history.html
+++ b/profiles/templates/profiles/order_history.html
@@ -25,5 +25,10 @@
                 </a>
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                <p>{{ orders }}</p>
+            </div>
+        </div>
     </div>
 {% endblock %}
