--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -9,9 +9,7 @@
 {% block page_header %}
     <div class="header-container container">
         <div class="row">
-            <div class="col">
-                
-            </div>
+            <div class="col"></div>
         </div>
     </div>
 {% endblock %}
@@ -69,7 +67,7 @@
             </div>
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Please fill out the form below to complete your order</p>
-                <form action="{% url 'checkout' %}" method="POST" id="payment_form">
+                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                     {% csrf_token %}
                     <fieldset class="rounded px-3 mb-5">
                         <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
@@ -101,13 +99,14 @@
                         <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
                         <!-- Stripe card element -->
                         <div class="mb-3" id="card-element"></div>
-
                         <!-- Stripe card errors display -->
                         <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view, this allows us to get the payment id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
                     </fieldset>
 
                     <div class="submit-button text-right mt-5 mb-2">
-                        <a class="btn btn-outline-black rounded-2">
+                        <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-2">
                             <span class="icon">
                                 <i class="fas fa-chevron-left"></i>
                             </span>
@@ -130,14 +129,15 @@
             </div>
         </div>
     </div>
-    <div class="loading-overlay">
+    <div id="loading-overlay">
         <h1 class="text-light logo-font loading-spinner">
             <span class="icon">
-                <i class="fas-fa-3x fa-sync-alt fa-spin"></i>
+                <i class="fas fa-3x fa-sync-alt fa-spin"></i>
             </span>
         </h1>
     </div>
 {% endblock %}
+
 {% block postloadjs %}
     {{ block.super}}
     {{ stripe_public_key|json_script:"id_stripe_public_key" }}
