Added order history to 'view_order_history' template, added url and view to render historic order details

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -86,7 +86,7 @@
                         <div class="form-check form-check-inline float-right">
                             {% if user.is_authenticated %}
                                 <label class="form-check-label" for="id-save-info">Save this delivery information to my profile</label>
-                                <input class="form-check-input ml-2 mr-0" type="checkbox" for="id-save-info" name="save-info checked">
+                                <input class="form-check-input ml-2 mr-0" type="checkbox" for="id-save-info" name="save-info" checked>
                             {% else %}
                                 <label class="form-check-label" for="id-save-info">
                                     <a class="text-info" href="{% url 'account_signup' %}">Create an account</a>
