--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <div class="col-12 col-lg-6">
-                <a href="{% url 'order_history' %}"><p class="text-white mt-3 mb-3">Order History</p></a>
+                <a href="{% url 'view_order_history' %}"><p class="text-white mt-3 mb-3">Order History</p></a>
                 <a href="{% url 'my_listings' %}"><p class="text-white mt-3 mb-3">View My Listings</p></a>
                 <a href="{% url 'saved_listings' %}"><p class="text-white mt-3 mb-3">Saved Listings</p></a>
                 <a href="{% url 'add_conversion' %}"><p class="text-white mt-3 mb-3">Add a Conversion</p></a>
