--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -1,3 +1,8 @@
+.order-history {
+    max-height: 416px;
+    overflow-y: auto;
+}
+
 #profile-update-form input::placeholder {
     color: #aab7c4;
 }
@@ -13,4 +18,8 @@
 
 #id_default_country option:first-child {
     color: #aab7c4;
+}
+
+tr {
+    border-top: 1em solid transparent;
 }
