--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -13,15 +13,18 @@
 <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col mt-3">
+            <div class="col mt-5">
                 <h2 class="logo-font page-header text-white">Merchandise</h2>
             </div>
         </div>
         <div class="row">
             <div class="col text-center">
-                {% for c in current_categories %}
+                <a class="category-badge text-decoration-none" href="{% url 'products' %}">
+                    <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light{% if not current_category %} active-category{% endif %}">All Products</span>
+                </a>
+                {% for c in all_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge badge-white text-white rounded-2 border border-light{% if current_category == c.name %} active-category{% endif %}">{{ c.friendly_name }}</span>
                     </a>
                 {% endfor %}
                 <hr class="page-header-hr text-white mb-1">
@@ -47,9 +50,6 @@
                     </div>
                     <div class="col-12 col-md-6 order-md-first">
                         <p class="text-white mt-3 text-center text-md-left">
-                            {% if search_term or current_categories or current_sorting != 'None_None' %}
-                                <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
-                            {% endif %}
                             {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
@@ -68,12 +68,13 @@
                                 </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
-                                    <p class="mb-0">{{ product.name }}</p>
+                                    
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer bg-dark pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
-                                            <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
+                                            <p class="mb-1 mt-2 text-white">{{ product.name }}</p>
+                                            <p class="lead mb-0 text-left text-white font-weight-bold">£{{ product.price }}</p>
                                             {% if product.category %}
                                                 <p class="small mt-1 mb-0">
                                                     <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
